@@ -21,7 +21,7 @@
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
  *
- *   $Id: m_unkline.c,v 1.33 1999/07/31 08:23:00 tomh Exp $
+ *   $Id: m_unkline.c,v 1.34 1999/08/01 06:47:20 tomh Exp $
  */
 #include "m_commands.h"
 #include "channel.h"
@@ -184,7 +184,6 @@ K:bar:No reason (1997/08/30 14.56):foo
           char *found_comment;
 
           strncpy_irc(buff, buf, BUFSIZE);      /* extra paranoia */
-          buff[BUFSIZE] = '\0';
 
           p = strchr(buff,'\n');
           if(p)
@@ -242,7 +241,6 @@ K:bar:No reason (1997/08/30 14.56):foo
           char *found_host;
 
           strncpy_irc(buff, buf, BUFSIZE);
-          buff[BUFSIZE] = '\0';
 /*
 #Dianora!db@ts2-11.ottawa.net K'd: foo@bar:No reason
 K:bar:No reason (1997/08/30 14.56):foo
